# IMPRS_template

C++/: .gitignore  CMakeLists.txt
C++/src/derivatives/: finite_difference.h
C++/src/integration/: integration.cpp
C++/src/optimisers/: CMakeLists.txt  cg.h  cg_arma.cpp  cg_arma.h  cg_base_class.cpp  cg_base_class.h  cg_class.cpp  cg_class.h  line_search.h
C++/src/test_functions/: test_functions.h
C++/unit_tests/: CMakeLists.txt  test_cg_arma.cpp  test_cg_class.cpp
fortran/: .gitignore  CMakeLists.txt  README.md
fortran/src/: CMakeLists.txt
fortran/src/integration/: CMakeLists.txt  integration.f90
fortran/unit_tests/: CMakeLists.txt  test_integration.f90
python/: Makefile  pyproject.toml
python/src/IMPRSPython/: cg.py  cg_abstract_class.py  cg_class.py  finite_difference.py  func_def.py  linesearch.py  optimiser_func_set.py
python/test/: test_cg.py  test_optimiser_func_set.py
